# owui-lint

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  owui-lint.example.yml
.agents/openwebui-extensions/: SKILL.md  workspace-tools.md
.agents/openwebui-extensions/references/: action-functions.md  actions.py  development-common.md  filter-functions.md  filter.py  pipe-functions.md  pipelines.md  pitfalls-and-troubleshooting.md  plugin.py  tools.py  valves.md  workspace-tools.md
.agents/skills/rust-antipatterns/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  enforce-pr-target.yml  release.yml
scripts/: install-git-hook.sh  install.ps1  install.sh  new-rule.sh  test-new-rule.sh  test-sync-readme.sh  uninstall.ps1  uninstall.sh
src/: analysis.rs  cli.rs  config.rs  glob.rs  lib.rs  linter.rs  main.rs  models.rs  output.rs  rules.rs  update.rs  util.rs
src/analysis/: mod.rs  parsing.rs  syntax.rs
tests/: cli_tests.rs  e2e_functions_tests.rs  linter_tests.rs  multiline_test.rs  rules_tests.rs
