[package]
name = "owui-lint"
version = "0.0.1"
edition = "2021"
rust-version = "1.93.1"
description = "Rust CLI linter for Open WebUI extensions."
license = "MIT"
default-run = "owui-lint"
publish = false

[lib]
name = "owui_lint"
path = "src/lib.rs"

[[bin]]
name = "owui-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
