[package]
name = "owui-lint"
version = "0.6.1"
edition = "2024"
rust-version = "1.93.1"
description = "Rust CLI linter for Open WebUI extensions."
license = "MIT"
default-run = "owui-lint"
publish = false

[lib]
name = "owui_lint"
path = "src/lib.rs"

[[bin]]
name = "owui-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = true

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[dev-dependencies]
tempfile = "3.26.0"
